# basic-rust-blockchain

./: Cargo.toml  Notes.md  Readme.md  rustfmt.toml
src/: block.rs  blockchain.rs  chain.rs  channels.rs  comms_debounce.rs  config.rs  constants.rs  crypto_hash.rs  lib.rs  libp2p_pubsub.rs  main.rs  p2p_mdns_bc_coms.rs  p2p_mdns_singleton.rs  p2p_task.rs  traits.rs  transaction.rs  transaction_miner.rs  transaction_pool.rs  txn_input.rs  utils.rs  wallet.rs
src/http_server/: blocks.rs  mod.rs  transact.rs  transaction_pool.rs  wallet.rs
tests/: blockchain_validity.rs  test_blockchain.rs  test_blockchain_validity.rs  test_transaction.rs  test_wallet.rs  transaction.rs
